cp project/force-app/main/default/objects/Commission__c/fields/Commission_Rule__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied Rule</label>
    <referenceTo>Commission_Rule__c</referenceTo>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>