cp project/force-app/main/default/objects/Commission__c/fields/Finance_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Finance_Remarks__c</fullName>
    <label>Finance Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>