cp project/force-app/main/default/objects/Commission__c/fields/Odoo_Commission_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Commission_ID__c</fullName>
    <label>Odoo Commission ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>