cp project/force-app/main/default/objects/Commission__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipName>Commissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>