cp project/force-app/main/default/objects/Commission__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>