cp project/force-app/main/default/objects/Commission__c/fields/Tax_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Tax_Deduction__c</fullName>
    <label>Tax Deduction (TDS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>