cp project/force-app/main/default/objects/Commission__c/fields/TDS_Rate__c.field-meta.xml
<CustomField>
    <fullName>TDS_Rate__c</fullName>
    <defaultValue>5.0</defaultValue>
    <label>TDS Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>