cp project/force-app/main/default/objects/Commission__c/validationRules/Approval_Requires_Eligibility.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Requires_Eligibility</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Approval_Status__c, "Approved"), NOT(ISPICKVAL(Eligibility_Status__c, "Eligible")))</errorConditionFormula>
    <errorMessage>Cannot approve commission until eligibility status is Eligible.</errorMessage>
</ValidationRule>