cp project/force-app/main/default/objects/Commission__c/validationRules/Paid_Requires_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Requires_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Payment_Status__c, "Paid"), NOT(ISPICKVAL(Approval_Status__c, "Approved")))</errorConditionFormula>
    <errorMessage>Payment cannot be marked Paid until Commission is Approved.</errorMessage>
</ValidationRule>